# ai.native.book

./: .gitignore  config.py  db.py  ingest.py  main.py  pyproject.toml  rag_tools.py
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/001-rag-chatbot/: 0001-rag-chatbot-feature-specification.spec.prompt.md  0002-spec-clarification-no-ambiguities.spec.prompt.md  0003-rag-chatbot-architecture-plan.plan.prompt.md  0004-plan-clarification-review.plan.prompt.md  0005-rag-chatbot-task-generation.tasks.prompt.md  0006-cross-artifact-analysis-validation.tasks.prompt.md  007-implement-rag-chatbot-continuation.green.prompt.md
history/prompts/constitution/: 001-rag-chatbot-constitution.constitution.prompt.md
specs/001-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-chatbot/checklists/: requirements.md
specs/001-rag-chatbot/contracts/: api.yaml  frontend-backend.md
